# Astview

./: .travis.yml  astview.cabal  stack-7.10.2.yaml  stack-7.8.4.yaml  stack-8.0.1.yaml
src/core/Language/Astview/: Language.hs
src/core/Language/Astview/Languages/: Haskell.hs  HaskellCore.hs  Python.hs
src/gui/Language/Astview/Gui/: Actions.hs
