Name:            astview
Version:         0.5
License:         MIT
License-File:    LICENSE
Author:
                 Pascal Hof <pascal.hof@udo.edu>,
                 Sebastian Menge <sebastian.menge@udo.edu>
Maintainer:      Pascal Hof <pascal.hof@udo.edu>
Synopsis:        A GTK-based abstract syntax tree viewer for custom
                 languages and parsers
Description:
                 Astview is a graphical viewer for abstract
                 syntax trees. It is implemented on the basis
                 of scrap-your-boilerplate (i.e. data2tree)
                 and works with all parsers that generate trees
                 that are instances of the Data.Data class.

Homepage:        https://github.com/pascalh/Astview
Category:        Language

Cabal-Version:   >= 1.8
Build-Type:      Simple
Tested-with:     GHC>=7.10.1
Data-Files:      data/astview.xml,
                 data/menu.xml,
                 LICENSE

Source-repository head
  type:          git
  location:      https://github.com/pascalh/Astview

Library
  GHC-Options:     -Wall
                   -fno-warn-unused-do-bind
                   -fno-warn-wrong-do-bind
                   -fno-warn-hi-shadowing
                   -fno-warn-name-shadowing
  Hs-Source-Dirs:  src/core
  Exposed-Modules: Language.Astview.Language
                   Language.Astview.SmallestSrcLocContainingCursor
                   Language.Astview.DataTree
                   Language.Astview.Languages
  Other-Modules:   Language.Astview.Languages.Haskell
                   Language.Astview.Languages.HaskellCore
                   Language.Astview.Languages.Python
  Build-Depends:     base >= 4.6.0.0 && < 5
                   , containers
                   , QuickCheck
                   , haskell-src-exts
                   , language-python
                   , syb
                   , syz
                   , ghc
                   , ghc-paths
  extensions:      FlexibleInstances,
                   DeriveDataTypeable,
                   RankNTypes

Executable         astview
  Hs-Source-Dirs:  src/gui
  Main-is:         Main.hs
  GHC-Options:     -Wall
                   -fno-warn-unused-do-bind
                   -fno-warn-wrong-do-bind
                   -fno-warn-hi-shadowing
                   -fno-warn-name-shadowing
  Other-Modules:   Language.Astview.Gui.Actions
                   Language.Astview.Gui.Init
                   Language.Astview.Gui.Menu
                   Language.Astview.Gui.Types
  Build-Depends:   base
                   , astview
                   , filepath
                   , bytestring
                   , Glob
                   , containers
                   , QuickCheck
                   , glib
                   , gtk3
                   , gtksourceview3
                   , directory
                   , mtl
                   , fclabels

  extensions:        TemplateHaskell
                   , TypeOperators
                   , ScopedTypeVariables
                   , OverloadedStrings
                   , DoAndIfThenElse
                   , CPP

test-suite basic
    type: exitcode-stdio-1.0
    Hs-Source-Dirs: test
    main-is: Main.hs
    Other-Modules: DataTree
                   SmallestSrcLocContainingCursor
                   SourceLocation
    build-depends: base,
                   astview,
                   containers,
                   syb,
                   control-monad-omega,
                   tasty,
                   tasty-hunit,
                   tasty-quickcheck,
                   QuickCheck
  extensions:      DeriveDataTypeable,
                   DeriveFunctor
